<resources>
    <string name="app_name">Book Application</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="user_password">Password</string>
    <string name="logIn">Log In</string>
    <string name="Register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
